--- a/index.html
+++ b/index.html
@@ -87,10 +87,34 @@
             padding: 20px 0;
             text-align: center;
         }
+            .top-bar a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+      font-size: 16px;
+    }
+            .top-bar {
+      background-color: #121212;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: space-between;
+    }
+    
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 <body>
+
+      <div class="top-bar">
+    <a class="logo" href="#">onlysiteme</a>
+    <div>
+      <a href="index.html">Home</a>
+    </div>
+  </div>
+
     <header>
         <div class="container">
             <h1>gjdev</h1>
