--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
       margin: 0 10px;
       font-size: 16px;
     }
+            .top-bar a:hover {
+      color: #ffcc00;
+    }
             .top-bar {
       background-color: #121212;
       color: #fff;
