--- a/UF-dev/index.html
+++ b/UF-dev/index.html
@@ -189,22 +189,11 @@
 
 <body>
     <div class="top-bar">
-        <a class="logo" href="#">onlysiteme</a>
+        <a class="logo" href="https://gjdev.it/">gjdev</a>
         <div>
             <a href="index.html">Home</a>
-            <a href="#" class="slidebar-toggle">Open Slidebar</a>
         </div>
     </div>
-
-    <div class="slidebar" id="slidebar">
-        <div class="slidebar-content">
-            <!-- Slidebar content here -->
-            <h2>Slidebar Content</h2>
-            <p>Example content</p>
-        </div>
-        <span class="slidebar-close">X</span>
-    </div>
-
     <header>
         <div class="container">
             <h1>United Security of Developers</h1>
